Archive2/96/28bf94a6ba3a14/output
main.cpp:12:15: error: incompatible operand types ('int' and 'basic_ostream<char, std::char_traits<char> >')
    (i2 != 0) ? p1 *= 2 : std::cout << &ivec << " holds an even number";
              ^ ~~~~~~~   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
